CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

# Use GCC
SET( CMAKE_CXX_COMPILER g++-mp-4.7 )

# When Clang is ready
#SET( CMAKE_CXX_COMPILER /opt/local/bin/clang++)

MESSAGE( STATUS "Building in ${BUILDENV} Environment" )

Project( Parana2 )

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET( CMAKE_BUILD_TYPE Release)
SET( CMAKE_CXX_FLAGS "-g -O3 -BOOST_NO_PROPER_STL_DEALLOCATE -DBOOST_POOL_NO_MT -DHAVE_ANSI_TERM -DNDEBUG -arch x86_64 -std=c++11 -Wl,-no_pie -Wno-deprecated ${CMAKE_CXX_FLAGS}")

# When Clang is ready
#SET( CMAKE_CXX_FLAGS "-O3 -g -std=c++11 -stdlib=libstdc++ ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE( Boost 1.42 COMPONENTS regex program_options filesystem timer system )

SET( PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
SET( CMAKE_INSTALL_PREFIX "." )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT}/build/bin )


SUBDIRS( src )

set(CPACK_SET_DESTDIR ON)
SET(CPACK_PACKAGING_INSTALL_PREFIX ".")
SET(CPACK_PACKAGE_DEFAULT_LOCATION "${CPACK_PACKAGE_NAME}")
set(CPACK_PACKAGE_EXECUTABLES "parana2" "Parana2")
set(CPACK_PACKAGE_NAME "Parana2")
set(CPACK_PACKAGE_VENDOR "Rob Patro")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Ensemble method for network history inference")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "9")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME
  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}-src")
set(CPACK_SOURCE_IGNORE_FILES
  "/doc/;/.git/;.gitignore;/build/;/.bzr/;~$;${CPACK_SOURCE_IGNORE_FILES}")
INCLUDE( CPack )
