INCLUDE(CheckLibraryExists)

SET( PARANA_SRCS FlipKey.cpp TreeUtils.cpp PhyloXMLParser.cpp MultiOpt.cpp main.cpp arg_parser.cpp)

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" )

INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIR}
  /usr/local/include
  /opt/local/include
  /opt/local/include/gcc47/c++
  /opt/local/include/gcc47/c++/x86_64-apple-darwin11
  ${PROJECT_ROOT}/include/
  ${CMAKE_SOURCE_DIR}
  ./
)


LINK_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/include
  ${BOOST_LIBRARYDIR}
  /usr/lib
  /opt/local/lib
  /usr/local/lib
  /opt/local/lib/gcc47
)

FIND_LIBRARY( BPP_CORE_LIBRARY NAMES bpp-core HINTS ${LINK_DIRECTORIES})
FIND_LIBRARY( BPP_PHYL_LIBRARY NAMES bpp-phyl HINTS ${LINK_DIRECTORIES})
FIND_LIBRARY( BPP_SEQ_LIBRARY NAMES bpp-seq HINTS ${LINK_DIRECTORIES})

FIND_LIBRARY( PUGIXML_LIBRARY NAMES pugixml HINTS ${LINK_DIRECTORIES})
FIND_LIBRARY( GMP_LIBRARY NAMES gmp HINTS ${LINK_DIRECTORIES})
FIND_LIBRARY( MPFR_LIBRARY NAMES mpfr HINTS ${LINK_DIRECTORIES})
FIND_LIBRARY( CLN_LIBRARY NAMES cln HINTS ${LINK_DIRECTORIES})

SET( BPP_LIBRARIES ${BPP_CORE_LIBRARY} ${BPP_PHYL_LIBRARY} ${BPP_SEQ_LIBRARY} )
SET( DEPENDENT_LIBS ${Boost_LIBRARIES} ${BPP_LIBRARIES} ${PUGIXML_LIBRARY} 
                    ${GMP_LIBRARY} ${MPFR_LIBRARY} ${CLN_LIBRARY} )

ADD_EXECUTABLE( parana2 ${PARANA_SRCS} )
TARGET_LINK_LIBRARIES( parana2 m pthread ${DEPENDENT_LIBS} )

## scripts
FILE( GLOB SCRIPTS ${PROJECT_ROOT}/scripts/*.py ${PROJECT_ROOT}/scripts/*.sh )

INSTALL( PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/parana2 DESTINATION bin )
INSTALL( FILES ${DEPENDENT_LIBS} DESTINATION bin )
INSTALL( FILES ${SCRIPTS} DESTINATION scripts )
INSTALL( FILES ${PROJECT_ROOT}/data/SimpleUndirectedModel.txt DESTINATION data )